fix: mobile adaptivity, audio, init visibility

--- a/momentum/src/sass/style.scss
+++ b/momentum/src/sass/style.scss
@@ -39,6 +39,10 @@ $smallScreenWidth: 420px;
   }
 }
 
+:root {
+  --app-height: 100vh;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -47,7 +51,7 @@ $smallScreenWidth: 420px;
 
 body {
   // min-width: 320px;
-  min-height: 100vh;
+  // min-height: 100vh;
   font-family: "Arial", sans-serif;
   font-size: 16px;
   color: #fff;
@@ -61,7 +65,7 @@ body {
   position: absolute;
   z-index: 100;
   width: 100vw;
-  height: 100vh;
+  height: var(--app-height);
   background-color: rgb(0, 0, 0, 0.3);
   transition: opacity 0.2s ease-out;
   display: flex;
@@ -128,7 +132,7 @@ body {
 .wrapper {
   display: grid;
   grid-template-rows: 1fr auto 1fr;
-  height: 100vh;
+  height: var(--app-height);
   padding: 20px;
 
   .header {
